--- a/templates/flows/flow_results.haml
+++ b/templates/flows/flow_results.haml
@@ -270,6 +270,18 @@
           color: rgb(119, 119, 119);
         }
 
+        @-moz-document url-prefix() {
+          .flatpickr.form-control.input {
+            width: 100% !important;
+            font-size: 14px;
+            padding: 7px 7px 6px 7px;
+            border-radius: var(--curvature-widget);
+            border: 1px solid var(--color-widget-border);
+            color: var(--color-widget-text);
+            outline: none;
+          }
+        }
+
     {% endlessblock %}
 
 -block extra-script
