--- a/templates/flows/flow_results.haml
+++ b/templates/flows/flow_results.haml
@@ -270,6 +270,15 @@
           color: rgb(119, 119, 119);
         }
 
+        .datepicker {
+          .clear-btn {
+            right: 0px;
+            position: absolute;
+            outline: none;
+            padding-right: 10px;
+          }
+        }
+
         @-moz-document url-prefix() {
           .flatpickr.form-control.input {
             width: 100% !important;
@@ -722,11 +731,11 @@
             %div{class: "w-1/2 flex flex-col pr-3"}
               %label.control-label.flex.m-0
                 -trans "After"
-              -include "includes/flatpickr_field.haml" with parent_classes="flex justify-center items-center" field_name="after" field_placeholder="Select a date" field_value=request.GET.after
+              -include "includes/flatpickr_field.haml" with parent_classes="flex justify-center items-center datepicker relative" field_name="after" field_placeholder="Select a date" field_value=request.GET.after
             %div{class: "w-1/2 flex flex-col pr-3"}
               %label.control-label.flex.m-0
                 -trans "Before"
-              -include "includes/flatpickr_field.haml" with parent_classes="flex justify-center items-center" field_name="before" field_placeholder="Select a date" field_value=request.GET.before
+              -include "includes/flatpickr_field.haml" with parent_classes="flex justify-center items-center datepicker relative" field_name="before" field_placeholder="Select a date" field_value=request.GET.before
           %div{class: "w-3/4 flex flex-grow"}
             %div{class: "w-6/12 mr-2", "data-toggle":"tooltip", title:"{{ request.GET.contact_query }}"}
               %label.control-label.flex.m-0
