Fixed issues with ability to filter by "contact_urn" with value as "tel:".

--- a/templates/api/v2/api_explorer.haml
+++ b/templates/api/v2/api_explorer.haml
@@ -122,6 +122,7 @@
     });
 
     function ensureQueryPrefix(query) {
+      query = query.replaceAll("+", "%2B");
       if (query && !query.startsWith('?')) {
         return '?' + query;
       } else {
