--- a/templates/orgs/integrations/dtone/account.haml
+++ b/templates/orgs/integrations/dtone/account.haml
@@ -2,7 +2,7 @@
 -load compress temba smartmin i18n
 
 -block summary
-  -if object.is_connected_to_dtone
+  -if integration_connected
     .flex.items-center
       .flex-grow.mr-4
         -trans "Connected to your <b>DT One</b> account."
@@ -14,13 +14,13 @@
 
 -block pre-form
   .mb-4
-    -if not object.is_connected_to_dtone
+    -if not integration_connected
       -blocktrans trimmed with link='<a target="_new" href="https://www.dtone.com/">DT One</a>'
         Adding a DT One account will allow you to send airtime credit over 400+ operators in over 100 countries.
         Once connected you can transfer airtime credit within your flows. To signup for an account, visit {{ link }}.
 
 -block fields
-  -if not object.is_connected_to_dtone
+  -if not integration_connected
     -render_field 'api_key'
     -render_field 'api_secret'
 
@@ -31,7 +31,7 @@
 -block form-buttons
 
 -block post-form
-  -if object.is_connected_to_dtone
+  -if integration_connected
     .mt-4
       -trans "Your account is connected to a DT One account."
     .mt-4
@@ -46,7 +46,7 @@
         -blocktrans trimmed
           This will disconnect your DT One account. Payment actions will no longer be processed. Are you sure you want to proceed?
     
-    #disconnect-dtone-form(href='{% url "orgs.org_dtone_account" %}?disconnect=true')
+    #disconnect-dtone-form(href='{{ request.path }}?disconnect=true')
 
 
 -block extra-script
