--- a/static/fonts/temba/style.css
+++ b/static/fonts/temba/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'temba';
-  src:  url('fonts/temba.eot?iqf12a');
-  src:  url('fonts/temba.eot?iqf12a#iefix') format('embedded-opentype'),
-    url('fonts/temba.ttf?iqf12a') format('truetype'),
-    url('fonts/temba.woff?iqf12a') format('woff'),
-    url('fonts/temba.svg?iqf12a#temba') format('svg');
+  src:  url('fonts/temba.eot?a4du02');
+  src:  url('fonts/temba.eot?a4du02#iefix') format('embedded-opentype'),
+    url('fonts/temba.ttf?a4du02') format('truetype'),
+    url('fonts/temba.woff?a4du02') format('woff'),
+    url('fonts/temba.svg?a4du02#temba') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -25,6 +25,9 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-weniwebchat:before {
+  content: "\e91e";
+}
 .icon-rocketchat:before {
   content: "\e916";
 }
