--- a/templates/contacts/contact_history.haml
+++ b/templates/contacts/contact_history.haml
@@ -30,7 +30,7 @@
           &nbsp;triggered
 
         %a(href='{%url "campaigns.campaignevent_read" event.campaign_event.id %}')
-          {{ eventfire.campaign_event.offset_display }} {{ eventfire.campaign_event.relative_to.name }}
+          {{ event.campaign_event.offset_display }} {{ event.campaign_event.relative_to.name }}
 
       -elif event.type == 'channel_event'
         -if event.channel_event_type == 'mt_miss'
