wip: WeniWebChat descriptions

--- a/templates/channels/types/weniwebchat/claim.haml
+++ b/templates/channels/types/weniwebchat/claim.haml
@@ -3,51 +3,24 @@
 
 -block pre-form
     -blocktrans with name=brand.name trimmed
-      Commodo ipsum culpa non aliquip nulla. Consectetur et esse cillum consequat ea magna ullamco aliqua officia.
+      With 
+      %b Weni Web Chat,
+      you can integrate your Rapidpro organization as a chat on your website.
   .mt-2
     -blocktrans trimmed
-      Ullamco aute pariatur qui elit ex exercitation consequat laboris nulla dolor sit nulla. 
-      Ut minim non in dolor sunt consequat aliqua reprehenderit excepteur labore occaecat.
-      
-
+      After input a
+      .code Name
+      for the chat that will connect to your website, you will need to configure the
+      .code Base URL
+      that Rapidpro requires for sending and receiving messages.
+      Then you will need to configure how the chat will be shown on your website. 
+	
   .mt-2
-
     -blocktrans trimmed
-      consequat deserunt sunt. Voluptate ea consequat adipisicing qui.
-  .mt-2
-
-    -blocktrans trimmed
-      Non laborum elit exercitation eu dolor irure fugiat nisi ut nisi mollit aliquip ut.
-
-  .mt-2
-
-    .alert-warning
-      -blocktrans trimmed
-        Nisi Lorem do laboris nisi incididunt fugiat. Magna irure veniam consequat aliqua ex sit ipsum ut. Irure reprehenderit ex veniam labore.
-
+      For this configuration, access 
+        %a(href="https://docs.ilhasoft.mobi/l/en/channels-category/untitled-article-en")
+          this documentation.
 
 -block extra-style
   {{ block.super }}
-
-  :css
-    .info {
-      width: 800px;
-      margin-bottom: 20px;
-    }
-
-    .important {
-      background-color: #efefef;
-      border: 1px solid #ccc;
-      padding: 10px 10px 0px 10px;
-      margin-bottom: 10px;
-    }
-
-    .medium-help {
-      font-size: 50px;
-      height: 50px;
-    }
-
-    .header-margin {
-      margin-left: 60px;
-    }
 
