--- a/templates/frame.haml
+++ b/templates/frame.haml
@@ -146,15 +146,17 @@
 
 %body#pageBody.bg-gradient
 
-  .weni-announcement.h-24
-    .flex.flex-row.justify-center
+  .weni-announcement
+    .weni-announcement-container.flex.flex-row
       .weni-left
-        Ilhasoft, Push e BotHub agora são Weni.
+        O Push agora é Weni Fluxos
       .weni-divider
       .weni-right
-        A partir dessa fusão, nosso propósito é continuar evoluindo a transformação digital na comunicação das organizações.
-      %a.weni-button(href="https://ilhasoft.com.br/somos-weni")
+        Novo módulo que estará disponível na nossa plataforma unificada em breve.
+      %a.weni-button(href="https://weni.ai/blog/modularizacao-plataformas/")
         Saiba mais
+      %button.weni-announcement-collapse
+        .icon-arrow-down.icon-2
 
   -include "components-body.html"
 
@@ -329,6 +331,23 @@
 
     :javascript
       $(document).ready(function() {
+
+        function announcementCollapse() {
+          $('.weni-announcement').hide();
+          $('#menu').addClass('collapsed')
+          $('.org-header').addClass('collapsed')
+        }
+
+        const announcementState = sessionStorage.getItem('weni-announcement-state');
+        if (announcementState === "false") {
+          announcementCollapse()
+        }
+
+        $(".weni-announcement-collapse").live('click', (event) => {
+          sessionStorage.setItem('weni-announcement-state', false);
+          announcementCollapse()
+        })
+
         if (navigator.appVersion.indexOf("Win")!=-1) {
           $("html").addClass("windows");
         }
