fix: announcement close button

--- a/templates/frame.haml
+++ b/templates/frame.haml
@@ -204,7 +204,7 @@
       %a.weni-button(href="https://weni.ai/blog/modularizacao-plataformas/")
         Saiba mais
       %button.weni-announcement-collapse
-        .icon-arrow-down.icon-2
+          .unnnic-icon-delete-1-1.unnnic-icon-large
 
   -include "components-body.html"
 
