--- a/static/fonts/icons/style.css
+++ b/static/fonts/icons/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'temba';
-  src:  url('fonts/temba.eot?j326sm');
-  src:  url('fonts/temba.eot?j326sm#iefix') format('embedded-opentype'),
-    url('fonts/temba.ttf?j326sm') format('truetype'),
-    url('fonts/temba.woff?j326sm') format('woff'),
-    url('fonts/temba.svg?j326sm#temba') format('svg');
+  src:  url('fonts/temba.eot?fm72dv');
+  src:  url('fonts/temba.eot?fm72dv#iefix') format('embedded-opentype'),
+    url('fonts/temba.ttf?fm72dv') format('truetype'),
+    url('fonts/temba.woff?fm72dv') format('woff'),
+    url('fonts/temba.svg?fm72dv#temba') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -25,6 +25,9 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-menu-2:before {
+  content: "\e091";
+}
 .icon-pushpin:before {
   content: "\e946";
 }
