fix: Rapidpro's Weni announcement style

--- a/static/brands/rapidpro/less/style.less
+++ b/static/brands/rapidpro/less/style.less
@@ -162,3 +162,18 @@ html {
   }
 
 }
+
+.unnnic-icon-large {
+  display: inline-block;
+  background-color: @unnnic-color-neutral-cloudy;
+  width: @unnnic-icon-size-lg;
+  height: @unnnic-icon-size-lg;
+}
+
+.unnnic-icon-delete-1-1 {
+  mask: url('/sitestatic/brands/rapidpro/icons/delete-1-1.svg');
+  mask-size: cover;
+
+  -webkit-mask: url('/sitestatic/brands/rapidpro/icons/delete-1-1.svg');
+  -webkit-mask-size: cover;
+}
