--- a/static/brands/rapidpro/less/variables.less
+++ b/static/brands/rapidpro/less/variables.less
@@ -12,3 +12,7 @@
 @color-formax-hovered: @color-links;
 
 @color-button-primary: @color-primary - #111;
+
+// Weni announcement
+@unnnic-color-neutral-cloudy: #67738B;
+@unnnic-icon-size-lg: 32px;
