--- a/templates/tickets/ticket_list.haml
+++ b/templates/tickets/ticket_list.haml
@@ -11,25 +11,13 @@
 
   :css
 
+    html {
+      --color-text-dark: #555;
+    }
+
     temba-select[name='ticket-filter'] {
       margin-bottom: 0.5em;
       margin-top: -1.3em;
-    }
-
-    .example {
-      padding: 20px;
-      border: 1px solid #e6e6e6;
-      margin: 10px;
-      border-radius: 3px;
-    }
-
-    .example-header {
-      padding-bottom: 10px;
-      font-size: 12px;
-    }
-
-    html {
-      --color-text-dark: #555;
     }
 
     .ticket-list {
@@ -116,7 +104,7 @@
       
 -block page-container
   .flex-col
-    .flex(style="height:100vh;margin-top:-121px;padding-top:121px;")
+    .flex(style="height:100vh;margin-top:-121px;padding-top:121px;margin-bottom:-105px;padding-bottom:105px;")
       .ticket-list.flex.flex-col.m-4.mr-2.pt-4
         %temba-select(name="ticket-filter" onchange="handleFilterChanged(event)")
           %temba-option(name="Open" value="O" icon="inbox")
@@ -127,5 +115,3 @@
 
       .flex-grow.flex-col.h-full.py-4.pb-4.pr-4
         %temba-contact-chat(-temba-refreshed="handleContactHistoryUpdated" -temba-content-changed="handleTicketUpdated")
-
--block footer
