--- a/templates/frame.haml
+++ b/templates/frame.haml
@@ -41,17 +41,19 @@
     -# this view make it possible to process translations from javascript land
     <script src="{% url 'django.views.i18n.javascript_catalog' %}"></script>
 
-    <!-- Hotjar Tracking Code for https://new.push.al -->
-    <script>
-        (function(h,o,t,j,a,r){
-            h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
-            h._hjSettings={hjid:2221593,hjsv:6};
-            a=o.getElementsByTagName('head')[0];
-            r=o.createElement('script');r.async=1;
-            r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
-            a.appendChild(r);
-        })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
-    </script>
+    {% if not use_weni_layout %}
+      <!-- Hotjar Tracking Code for https://new.push.al -->
+      <script>
+          (function(h,o,t,j,a,r){
+              h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+              h._hjSettings={hjid:{{hotjar_id}},hjsv:6};
+              a=o.getElementsByTagName('head')[0];
+              r=o.createElement('script');r.async=1;
+              r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+              a.appendChild(r);
+          })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+      </script>
+    {% endif %}
 
     -compress js
       :javascript
@@ -198,12 +200,12 @@
     .weni-announcement
       .weni-announcement-container.flex.flex-row
         .weni-left
-          O Push agora é Weni Fluxos
+          {{ announcement_left }}
         .weni-divider
         .weni-right
-          Novo módulo que estará disponível na nossa plataforma unificada em breve.
-        %a.weni-button(href="https://weni.ai/blog/modularizacao-plataformas/")
-          Saiba mais
+          {{ announcement_right }}
+        %a.weni-button(href="{{ announcement_link }}")
+          {{ announcement_button }}
         %button.weni-announcement-collapse
             .unnnic-icon-delete-1-1.unnnic-icon-large
 
