fix: lessc compiler rapidpro

--- a/static/brands/rapidpro/less/style.less
+++ b/static/brands/rapidpro/less/style.less
@@ -165,9 +165,9 @@ html {
 
 .unnnic-icon-large {
   display: inline-block;
-  background-color: @unnnic-color-neutral-cloudy;
-  width: @unnnic-icon-size-lg;
-  height: @unnnic-icon-size-lg;
+  background-color: #67738B;
+  width: 32px;
+  height: 32px;
 }
 
 .unnnic-icon-delete-1-1 {
