--- a/templates/frame.haml
+++ b/templates/frame.haml
@@ -257,7 +257,7 @@
         .org-header
           -if user_orgs|length > 1
             .pull-right.toggle
-              .icon-menu
+              .icon-menu-2
 
           .org
             {{ user_org.name|truncatechars:30 }}
