--- a/templates/tickets/ticket_list.haml
+++ b/templates/tickets/ticket_list.haml
@@ -46,8 +46,6 @@
       var contact = event.target.value;
       var chat = document.querySelector("temba-contact-chat");
       chat.contact = contact;
-
-      
     }
     
     function handleContactHistoryUpdated(event) {
@@ -110,7 +108,7 @@
           %temba-option(name="Open" value="O" icon="inbox")
           %temba-option(name="Closed" value="C" icon="check")
         
-        .flex.flex-grow
+        .flex.flex-grow(style="max-height:100%;margin-bottom:-30px;padding-bottom:30px")
           %temba-contacts(endpoint="/contact/tickets/?_format=json&folder=open" -temba-refreshed="handleTicketsRefreshed" onchange="handleContactChanged(event)")
 
       .flex-grow.flex-col.h-full.py-4.pb-4.pr-4
