feat: sidebar go back button and shrink button label fix

--- a/templates/includes/side.haml
+++ b/templates/includes/side.haml
@@ -1,6 +1,16 @@
 -load smartmin i18n humanize temba compress
 
 #unnnic-menu
+
+  %div{href:"#", class:"button-secondary-small-icon-on-left", onclick:'goBack()'}
+    .icon.unnnic-keyboard-arrow-left-1.unnnic-icon-ant
+    .title
+      -trans "Return"
+    .unnnic-tooltip
+        -trans "Return"
+
+  %div{class:"divider"}
+
   -if org_perms.msgs.msg_inbox and not request.user.is_superuser
     %a{href:"{% url 'msgs.msg_inbox' %}", class:"{% active request 'inbox|outbox|broadcast|call|msg/filter|msg/flow|msg/archived|failed' %}"}
       .circle.unnnic-icon-message-bubble-3.unnnic-icon-ant{class:"{% active request 'inbox|outbox|broadcast|call|msg/filter|msg/flow|msg/archived|failed' %}"}
@@ -91,9 +101,9 @@
   %a{href:"#", class:"unnnic-shrink-button", onclick:'resizeSidebar()'}
     #unnnic-shrink-button.circle.unnnic-expand-8-1.unnnic-icon-ant
     .title
-      -trans "Shrink"
+      -trans "Hide"
     .unnnic-tooltip
-        -trans "Shrink"
+        -trans "Hide"
 
 -if user_org and user_org.has_low_credits and not user.is_superuser
   -if user_org.get_credits_remaining <= 0
@@ -124,4 +134,8 @@
       $("#unnnic-content").toggleClass("reduced")
       $("#unnnic-menu").toggleClass("reduced")
       $("#unnnic-shrink-button").toggleClass("reduced")
+    }
+
+    function goBack() {
+      window.history.back();
     }
