fix: section order and remove sidebar menu from org config page

--- a/templates/orgs/org_edit.haml
+++ b/templates/orgs/org_edit.haml
@@ -29,10 +29,10 @@
           {% endblocktrans%}
 
 
-    .buttons
-      -if object.is_multi_org
-        .button-light(onclick="goto(event)" href='{% url "orgs.org_sub_orgs" %}')
-          -trans "Manage Workspaces"
+    -# .buttons
+    -#   -if object.is_multi_org
+    -#     .button-light(onclick="goto(event)" href='{% url "orgs.org_sub_orgs" %}')
+    -#       -trans "Manage Workspaces"
 
 
 
