improve: workspace config text

--- a/templates/orgs/org_edit.haml
+++ b/templates/orgs/org_edit.haml
@@ -15,7 +15,7 @@
   .flex.items-center
     .text.flex-grow.mr-4
       -blocktrans trimmed with org=object.name
-        Your workspace is <b>{{org}}</b>
+        Your project is <b>{{org}}</b>
 
       -blocktrans trimmed with timezone=object.timezone
         which is in the <b>{{timezone}}</b> timezone.
@@ -28,7 +28,10 @@
             You have <b>{{org_count}}</b> child workspaces.
           {% endblocktrans%}
 
-
+      .mt-2.text-sm.text-gray-700
+        -blocktrans trimmed with timezone=object.timezone
+          Click here to edit
+      
     -# .buttons
     -#   -if object.is_multi_org
     -#     .button-light(onclick="goto(event)" href='{% url "orgs.org_sub_orgs" %}')
