--- a/templates/contacts/contact_history.haml
+++ b/templates/contacts/contact_history.haml
@@ -159,6 +159,11 @@
         -blocktrans trimmed with subject=event.ticket.subject ticketer=event.ticket.ticketer.name
           Opened ticket on <a href="{{ ticketer_url }}">{{ ticketer }}</a> with subject <b>{{ subject }}</b>
 
+      -elif event.type == 'ticket_closed'
+        -url 'tickets.ticket_filter' event.ticket.ticketer.uuid as ticketer_url
+        -blocktrans trimmed with subject=event.ticket.subject ticketer=event.ticket.ticketer.name
+          Closed ticket on <a href="{{ ticketer_url }}">{{ ticketer }}</a> with subject <b>{{ subject }}</b>
+
       -elif event.type == 'webhook_called'
         -if event.status == "success"
           -trans "Successfully called"
