--- a/templates/utils/whatsapp/templates.haml
+++ b/templates/utils/whatsapp/templates.haml
@@ -11,7 +11,9 @@
 
 -block subtitle
   .text-lg
-    -trans "Templates are synced from your WhatsApp account every 15 minutes."
+    {{ object.get_channel_type_display }}
+
+    -trans "Whatsapp Templates are synced from your account every 15 minutes."
 
 -block content
   %table.list#templates
