--- a/templates/tickets/ticket_list.haml
+++ b/templates/tickets/ticket_list.haml
@@ -71,9 +71,9 @@
 
       var filter = event.target.values[0].value;
       if (filter === "O") {
-        contacts.endpoint = "/contact/tickets/?_format=json&folder=open"
+        contacts.endpoint = "{% url 'tickets.ticket_folder' folder='open' %}?_format=json"
       } else {
-        contacts.endpoint = "/contact/tickets/?_format=json&folder=closed"
+        contacts.endpoint = "{% url 'tickets.ticket_folder' folder='closed' %}?_format=json"
       }
     }
 
@@ -109,7 +109,7 @@
           %temba-option(name="Closed" value="C" icon="check")
         
         .flex.flex-grow(style="max-height:100%;margin-bottom:-30px;padding-bottom:30px")
-          %temba-contacts(endpoint="/contact/tickets/?_format=json&folder=open" -temba-refreshed="handleTicketsRefreshed" onchange="handleContactChanged(event)")
+          %temba-contacts(endpoint="{% url 'tickets.ticket_folder' folder='open' %}?_format=json" -temba-refreshed="handleTicketsRefreshed" onchange="handleContactChanged(event)")
 
       .flex-grow.flex-col.h-full.py-4.pb-4.pr-4
         %temba-contact-chat(-temba-refreshed="handleContactHistoryUpdated" -temba-content-changed="handleTicketUpdated")
