--- a/templates/utils/whatsapp/templates.haml
+++ b/templates/utils/whatsapp/templates.haml
@@ -13,7 +13,7 @@
   .text-lg
     {{ object.get_channel_type_display }}
 
-    -trans "Whatsapp Templates are synced from your account every 15 minutes."
+    -trans "WhatsApp Templates are synced from your account every 15 minutes."
 
 -block content
   %table.list#templates
