--- a/templates/orgs/org_manage_accounts.haml
+++ b/templates/orgs/org_manage_accounts.haml
@@ -16,8 +16,8 @@
     .role .control-group {
       margin-bottom: 0;
     }
-    temba-checkbox {
-      --fa-icon-fill-color: #999;
+    table.list tr td temba-checkbox {
+      --icon-color: #666 !important;
     }
 
 -block fields
