--- a/templates/contacts/contactimport_preview.haml
+++ b/templates/contacts/contactimport_preview.haml
@@ -21,13 +21,13 @@
           %table
             -for column in form.columns
               %tr.mapping.w-full.items-center
-                %td.mapping-include.p-1
+                %td.mapping-include.pt-2.pr-2
                   -if column.controls
                     {% render_field column.controls.0 %}
                   -elif column.mapping.type == "ignore"
-                    %fa-icon.far.fa-square.disabled-checkbox(size="16px" path-prefix="/sitestatic")
+                    %temba-checkbox(disabled="true")
                   -else
-                    %fa-icon.far.fa-check-square.disabled-checkbox(size="16px" path-prefix="/sitestatic")
+                    %temba-checkbox(checked="true" disabled="true")
                 %td.mapping-header.p-1.pr-4
                   <b>{{ column.header }}</b>
                 %td.mapping-as.p-1
@@ -108,9 +108,6 @@
     .page-content {
       align-self: auto;
       max-width: 1024px;
-    }
-    .mapping .disabled-checkbox {
-      --fa-icon-fill-color: #CCC;
     }
     .mapping .checkbox-label {
       display: none;
